feat: Add missed logging
